changed hero pattern

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Wecreo</title>
 </head>
 <body>
-<img src="./assets/images/hero-pattern.svg" alt="colorful pattern" class="hero-pattern">
+<img src="./assets/images/hero-pattern2.png" alt="colorful pattern" class="hero-pattern">
      <!-- HEADER FOR BIG SCREENS -->
    <header class="big-screen">
     <div class="logo">
