added services, projects sections and menu icon

--- a/index.html
+++ b/index.html
@@ -13,14 +13,27 @@
     <title>Wecreo</title>
 </head>
 <body>
-<img src="./assets/images/hero-pattern2.png" alt="colorful pattern" class="hero-pattern">
+<img src="./assets/images/hero-pattern.png" alt="colorful pattern" class="hero-pattern">
      <!-- HEADER FOR BIG SCREENS -->
    <header class="big-screen">
     <div class="logo">
         <a href="#"><img src="./assets/images/logo.svg" alt="Logo"/></a>
     </div>
     <div class="menu-btn">
-        <button>Menu</button>
+        <button>Menu
+            <div class="menu-icon">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </button>
+        
     </div>
     <nav style="display: none;">
         <ul>
@@ -46,9 +59,95 @@
 
     </section>
     <section id="services">
-        <h2 class="heading-secondary">About Us</h2>
-        <p class="paragraph paragraph--medium">We are a group of talented people with an unique approach to projects and with the main goal of bringing real value to our customers. We create human-centered enterprise software that has the polished, snappy feel of the best consumer apps.</p>
-        <p class="paragraph paragraph--medium">We’re a team of technologists, strategists, and creative problem solvers seeking to make a positive impact on your business and the world around us.</p>
+        <h2 class="heading-secondary">Services that we offer</h2>
+        <div class="services-container">
+            <article class="service">
+                <img src="./assets/images/services/ui-ux-pattern.svg" alt="colorful pattern" class="service__pattern">
+                <div class="service__info">
+                    <h3 class="heading-tertiary">UI/UX Design</h3>
+                    <p class="paragraph paragraph--regular">We create products and services provide outstanding usability while embracing your brand's personality.</p>
+                </div>
+                <a href="#">
+                    <img src="./assets/images/services/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                </a>
+            </article>
+            <article class="service">
+                <img src="./assets/images/services/website-pattern.svg" alt="colorful pattern" class="service__pattern">
+                <div class="service__info">
+                    <h3 class="heading-tertiary">Website development</h3>
+                    <p class="paragraph paragraph--regular">Our web designers and developers create responsive websites that feel at home on any device.</p>
+                </div>
+                <a href="#">
+                    <img src="./assets/images/services/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                </a>            </article>
+            <article class="service">
+                <img src="./assets/images/services/web-app-pattern.svg" alt="colorful pattern" class="service__pattern">
+                <div class="service__info">
+                    <h3 class="heading-tertiary">Web App Development</h3>
+                    <p class="paragraph paragraph--regular">We plan, design and implement all the functionalities of the application in an integrated way.</p>
+                </div>
+                <a href="#">
+                    <img src="./assets/images/services/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                </a>
+            </article>
+            <article class="service">
+                <img src="./assets/images/services/maintenance-pattern.svg" alt="colorful pattern" class="service__pattern">
+                <div class="service__info">
+                    <h3 class="heading-tertiary">Maintenance</h3>
+                    <p class="paragraph paragraph--regular">The web products need regular checkups and adjustments in order to enhance the technical functions.</p>
+                </div>
+                <a href="#">
+                    <img src="./assets/images/services/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                </a>
+            </article>
+        </div>
+
+    </section>
+    <section id="projects">
+        <h2 class="heading-secondary">Explore a few of our most impactful projects</h2>
+        <div class="projects-container">
+            <article class="project">
+                <img src="./assets/images/projects/project-img-1.svg" alt="project image" class="project__image">
+                <div class="project__info">
+                    <h3 class="heading-tertiary">Project Name</h3>
+                    <p class="paragraph paragraph--medium">Eu consequat ac felis donec et odio pellentesque diam. Tortor condimentum lacinia quis vel  consequat semper...</p>
+                    <a href="#">
+                        <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                    </a>
+                </div>
+            </article>
+            <article class="project">
+                <img src="./assets/images/projects/project-img-2.svg" alt="project image" class="project__image">
+                <div class="project__info">
+                    <h3 class="heading-tertiary">Project Name</h3>
+                    <p class="paragraph paragraph--medium">Felis donec et odio pettesque diam. Condimentum lacinia quis vel eros donec consequat semper nulla facilisi...</p>
+                    <a href="#">
+                        <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                    </a>
+                </div>
+            </article>
+            <article class="project">
+                <img src="./assets/images/projects/project-img-3.svg" alt="project image" class="project__image">
+                <div class="project__info">
+                    <h3 class="heading-tertiary">Project Name</h3>
+                    <p class="paragraph paragraph--medium">Egiutas sed tempus pharetra. Felis donec et odio gravida ate diam volutpat porta lorem uat et commodo...</p>
+                    <a href="#">
+                        <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                    </a>
+                </div>
+            </article>
+            <article class="project">
+                <img src="./assets/images/projects/project-img-4.svg" alt="project image" class="project__image">
+                <div class="project__info">
+                    <h3 class="heading-tertiary">Project Name</h3>
+                    <p class="paragraph paragraph--medium">Varius sit amet mattis vulpute. Ultrices mi tempus imperdiet elit eget gravida fermentum dui faucibus...</p>
+                    <a href="#">
+                        <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
+                    </a>
+                </div>
+            </article>
+           
+        </div>
 
     </section>
 </main>
