added team section

--- a/index.html
+++ b/index.html
@@ -147,6 +147,102 @@
         </div>
 
     </section>
+
+    <section id="team">
+        <h2 class="heading-secondary">Meet Our Team</h2>
+        <div class="members-container">
+            <article class="member">
+                <img src="./assets/images/team/member-img-1.png" alt="member image" class="member__image">
+                <div class="member__info">
+                    <p class="paragraph paragraph--bold">Name Surname</p>
+                    <p class="paragraph paragraph--regular">Job Title</p>
+                    <div class="social-icons">
+                        <a href="#">
+                            <img src="./assets/images/team/linkedin.svg" alt="linkedin icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/web.svg" alt="web icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/mail.svg" alt="mail icon">
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <article class="member">
+                <img src="./assets/images/team/member-img-2.png" alt="member image" class="member__image">
+                <div class="member__info">
+                    <p class="paragraph paragraph--bold">Name Surname</p>
+                    <p class="paragraph paragraph--regular">Job Title</p>
+                    <div class="social-icons">
+                        <a href="#">
+                            <img src="./assets/images/team/linkedin.svg" alt="linkedin icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/web.svg" alt="web icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/mail.svg" alt="mail icon">
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <article class="member">
+                <img src="./assets/images/team/member-img-3.png" alt="member image" class="member__image">
+                <div class="member__info">
+                    <p class="paragraph paragraph--bold">Name Surname</p>
+                    <p class="paragraph paragraph--regular">Job Title</p>
+                    <div class="social-icons">
+                        <a href="#">
+                            <img src="./assets/images/team/linkedin.svg" alt="linkedin icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/web.svg" alt="web icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/mail.svg" alt="mail icon">
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <article class="member">
+                <img src="./assets/images/team/member-img-1.png" alt="member image" class="member__image">
+                <div class="member__info">
+                    <p class="paragraph paragraph--bold">Name Surname</p>
+                    <p class="paragraph paragraph--regular">Job Title</p>
+                    <div class="social-icons">
+                        <a href="#">
+                            <img src="./assets/images/team/linkedin.svg" alt="linkedin icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/web.svg" alt="web icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/mail.svg" alt="mail icon">
+                        </a>
+                    </div>
+                </div>
+            </article>
+            <article class="member">
+                <img src="./assets/images/team/member-img-2.png" alt="member image" class="member__image">
+                <div class="member__info">
+                    <p class="paragraph paragraph--bold">Name Surname</p>
+                    <p class="paragraph paragraph--regular">Job Title</p>
+                    <div class="social-icons">
+                        <a href="#">
+                            <img src="./assets/images/team/linkedin.svg" alt="linkedin icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/web.svg" alt="web icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/team/mail.svg" alt="mail icon">
+                        </a>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
 </main>
 </body>
 </html>
