--- a/index.html
+++ b/index.html
@@ -243,6 +243,47 @@
             </article>
         </div>
     </section>
+
+   
 </main>
+
+<footer id="contact" class="big-screen">
+    <article class="upper">
+        <h2 class="heading-secondary">Let’s create an awesome project together!</h2>
+        <p class="paragraph paragraph--medium">Get in touch with us to speak more about your project.</p>
+    </article>
+    <article class="mid">
+        <div class="logo">
+            <a href="#"><img src="./assets/images/logo.svg" alt="Logo"/></a>
+        </div>
+        <div class="contact-info">
+            <div class="mail-phone">
+                <p class="paragraph paragraph--bold">hello@wecreo.agency</p>
+                <p class="paragraph paragraph--bold">+(0000) 012 345 67 89</p>
+            </div>
+            <div class="address">
+                <p class="paragraph paragraph--bold">82 Street address,</p>
+                <p class="paragraph paragraph--bold">Baku, Azerbaijan, AZ0000 </p>
+            </div>
+        </div>
+        <div class="social-icons">
+            <a href="#">
+                <img src="./assets/images/footer/linkedin.svg" alt="linkedin icon">
+            </a>
+            <a href="#">
+                <img src="./assets/images/footer/twitter.svg" alt="twitter icon">
+            </a>
+            <a href="#">
+                <img src="./assets/images/footer/facebook.svg" alt="facebook icon">
+            </a>
+            <a href="#">
+                <img src="./assets/images/footer/instagram.svg" alt="instagram icon">
+            </a>
+        </div>
+    </article>
+    <article class="lower">
+        <p class="paragraph paragraph--regular">All rights reserved. Wecreo, 2020.</p>
+    </article>
+</footer>
 </body>
 </html>
