added locomotive scroll

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
    
 </main>
 
-<footer id="contact" class="big-screen" data-scroll-section data-scroll data-scroll-speed="4">
+<footer id="contact" class="big-screen" data-scroll-section>
     <article class="upper">
         <h2 class="heading-secondary">Let’s create an awesome project together!</h2>
         <p class="paragraph paragraph--medium">Get in touch with us to speak more about your project.</p>
