added locomotive scroll

--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
     </nav>        
 </header>
 <main data-scroll-section>
-    <section id="hero" data-scroll data-scroll-speed="2">
+    <section id="hero">
         <h1 class="heading-primary">We’re a digital agency to bring your product to life</h1>
         <p class="paragraph paragraph--medium">We work closely with our clients to define, design and develop transformative user experiences.</p>
         <a href="#">Get in touch <img src="./assets/images/projects/right-arrow.svg" alt="right arrow."></a>
     </section>
-    <section id="about" data-scroll data-scroll-speed="4">
+    <section id="about">
         <h2 class="heading-secondary">About Us</h2>
         <p class="paragraph paragraph--medium">We are a group of talented people with an unique approach to projects and with the main goal of bringing real value to our customers. We create human-centered enterprise software that has the polished, snappy feel of the best consumer apps.</p>
         <p class="paragraph paragraph--medium">We’re a team of technologists, strategists, and creative problem solvers seeking to make a positive impact on your business and the world around us.</p>
 
     </section>
-    <section id="services" data-scroll data-scroll-speed="4">
+    <section id="services">
         <h2 class="heading-secondary">Services that we offer</h2>
         <div class="services-container">
             <article class="service">
@@ -109,7 +109,7 @@
         </div>
 
     </section>
-    <section id="projects" data-scroll data-scroll-speed="4">
+    <section id="projects">
         <h2 class="heading-secondary">Explore a few of our most impactful projects</h2>
         <div class="projects-container">
             <article class="project">
@@ -157,7 +157,7 @@
 
     </section>
 
-    <section id="team" data-scroll data-scroll-speed="4">
+    <section id="team">
         <h2 class="heading-secondary">Meet Our Team</h2>
         <div class="members-container">
             <article class="member">
