added locomotive scroll

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
 <!-- ! locomotive-scroll v3.3.11 | MIT License | https://github.com/locomotivemtl/locomotive-scroll  -->
 <!--  START  -->
-<script>
+<!-- <script>
     (function () {
   var scroll = new LocomotiveScroll({
     el: document.querySelector("[data-scroll-container]"),
@@ -309,7 +309,7 @@
     // offset: ["10%", 100]
   });
 })();
-</script>
+</script> -->
 
 <script src="./script.js"></script>
 <!--  END  -->
