added nav interactions

--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
     <div class="menu-btn">
         <button>Menu
             <div class="menu-icon">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+                <div class="four"></div>
+                <div class="five"></div>
+                <div class="six"></div>
+                <div class="seven"></div>
+                <div class="eight"></div>
+                <div class="nine"></div>
             </div>
         </button>
         
     </div>
     <nav>
-        <ul>
+        <ul class="menu-items">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Our Team</a></li>
         </ul>
-        <ul>
+        <ul class="contact">
             <li>
                 <p>Get In Touch</p>
                 <a href="#">hello@wecreo.agency</a>
