commented locomotive scroll lines

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./style/pages/home.css">
 
     <!-- LOCOMOTIVE SCROLL -->
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js" integrity="sha256-p4OuLeAtmp2jz4BehPUj4k7TIllujbqDopoQKaSdsVo=" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js" integrity="sha256-p4OuLeAtmp2jz4BehPUj4k7TIllujbqDopoQKaSdsVo=" crossorigin="anonymous"></script> -->
 
     
     <title>Wecreo</title>
