--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="hero">
         <h1 class="heading-primary">We’re a digital agency to bring your product to life</h1>
         <p class="paragraph paragraph--medium">We work closely with our clients to define, design and develop transformative user experiences.</p>
-        <a href="#">Get in touch <img src="./assets/images/projects/right-arrow.svg" alt="right arrow."></a>
+        <a href="#contact">Get in touch <img src="./assets/images/projects/right-arrow.svg" alt="right arrow."></a>
     </section>
     <section id="about">
         <h2 class="heading-secondary">About Us</h2>
