--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </header>
 <main data-scroll-section>
     <section id="hero">
-        <h1 class="heading-primary">We’re a digital agency to bring your product to life</h1>
+        <h1 class="heading-primary">We’re a digital agency to bring your project to life</h1>
         <p class="paragraph paragraph--medium">We work closely with our clients to define, design and develop transformative user experiences.</p>
         <a href="#contact">Get in touch <img src="./assets/images/projects/right-arrow.svg" alt="right arrow."></a>
     </section>
