--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#fcffff">
 
     <!-- FAVICON -->
     <link rel="shortcut icon" type="image/png" sizes="334x334" href="./assets/images/favicon.png" />
