changed footer email address

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         </div>
         <div class="contact-info">
             <div class="mail-phone">
-                <p class="paragraph paragraph--bold">hello@wecreo.agency</p>
+                <p class="paragraph paragraph--bold">hey@wecreo.agency</p>
                 <p class="paragraph paragraph--bold">+(0000) 012 345 67 89</p>
             </div>
             <div class="address">
