changed header email address

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul class="contact">
             <li>
                 <p>Get In Touch</p>
-                <a href="#">hello@wecreo.agency</a>
+                <a href="#">hey@wecreo.agency</a>
             </li>
         </ul>
     </nav>        
