changed menu item fade out order

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/png" sizes="334x334" href="./assets/images/favicon.png" />
 
     <!-- FONTS -->
-     <!-- Playfair Display & Montserrat -->
+     <!-- Roboto & Montserrat -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500:700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- STYLE -->
