--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <!-- FONTS -->
      <!-- Roboto & Montserrat -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500:700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+
+
 
     <!-- STYLE -->
     <link rel="stylesheet" href="./style/pages/home.css">
