removed 'fixed errors

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="hero">
             <div class="hero-text-content">
                 <h1 class="heading-primary">We’re a digital agency <br>to bring your project to life</h1>
-                <p class="paragraph paragraph--medium">We work closely with our clients to define, design and develop transformative user experiences.</p>
+                <p class="paragraph paragraph--regular">We work closely with our clients to define, design and develop transformative user experiences.</p>
                 <a href="#contact">Get in touch <img src="./assets/images/projects/right-arrow.svg" alt="right arrow."></a>
             </div>
             <div class="hero-pattern-container">
@@ -127,8 +127,8 @@
         </section>
         <section id="about">
             <h2 class="heading-secondary">About Us</h2>
-            <p class="paragraph paragraph--medium">We are a group of talented people with an unique approach to projects and with the main goal of bringing real value to our customers. We create human-centered enterprise software that has the polished, snappy feel of the best consumer apps.</p>
-            <p class="paragraph paragraph--medium">We’re a team of technologists, strategists, and creative problem solvers seeking to make a positive impact on your business and the world around us.</p>
+            <p class="paragraph paragraph--regular">We are a group of talented people with an unique approach to projects and with the main goal of bringing real value to our customers. We create human-centered enterprise software that has the polished, snappy feel of the best consumer apps.</p>
+            <p class="paragraph paragraph--regular">We’re a team of technologists, strategists, and creative problem solvers seeking to make a positive impact on your business and the world around us.</p>
 
         </section>
         <section id="services">
@@ -176,7 +176,7 @@
                     <img src="./assets/images/projects/project-img-1.svg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
-                        <p class="paragraph paragraph--medium">Eu consequat ac felis donec et odio pellentesque diam. Tortor condimentum lacinia quis vel  consequat semper...</p>
+                        <p class="paragraph paragraph--regular">Eu consequat ac felis donec et odio pellentesque diam. Tortor condimentum lacinia quis vel  consequat semper...</p>
                         <a href="#">
                             <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
                         </a>
@@ -186,7 +186,7 @@
                     <img src="./assets/images/projects/project-img-2.svg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
-                        <p class="paragraph paragraph--medium">Felis donec et odio pettesque diam. Condimentum lacinia quis vel eros donec consequat semper nulla facilisi...</p>
+                        <p class="paragraph paragraph--regular">Felis donec et odio pettesque diam. Condimentum lacinia quis vel eros donec consequat semper nulla facilisi...</p>
                         <a href="#">
                             <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
                         </a>
@@ -196,7 +196,7 @@
                     <img src="./assets/images/projects/project-img-3.svg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
-                        <p class="paragraph paragraph--medium">Egiutas sed tempus pharetra. Felis donec et odio gravida ate diam volutpat porta lorem uat et commodo...</p>
+                        <p class="paragraph paragraph--regular">Egiutas sed tempus pharetra. Felis donec et odio gravida ate diam volutpat porta lorem uat et commodo...</p>
                         <a href="#">
                             <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
                         </a>
@@ -206,7 +206,7 @@
                     <img src="./assets/images/projects/project-img-4.svg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
-                        <p class="paragraph paragraph--medium">Varius sit amet mattis vulpute. Ultrices mi tempus imperdiet elit eget gravida fermentum dui faucibus...</p>
+                        <p class="paragraph paragraph--regular">Varius sit amet mattis vulpute. Ultrices mi tempus imperdiet elit eget gravida fermentum dui faucibus...</p>
                         <a href="#">
                             <img src="./assets/images/projects/right-arrow.svg" alt="right-arrow" class="right-arrow">
                         </a>
@@ -450,7 +450,7 @@
     <footer id="contact" class="big-screen" data-scroll-section>
         <article class="upper">
             <h2 class="heading-secondary">Let’s create an awesome project together!</h2>
-            <p class="paragraph paragraph--medium">Get in touch with us to speak more about your project.</p>
+            <p class="paragraph paragraph--regular">Get in touch with us to speak more about your project.</p>
         </article>
         <article class="mid">
             <div class="logo">
