changed project cover images

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <h2 class="heading-secondary">Explore a few of our most impactful projects</h2>
             <div class="projects-container">
                 <article class="project">
-                    <img src="./assets/images/projects/project-img-1.svg" alt="project image" class="project__image">
+                    <img src="./assets/images/projects/project-img-1.jpg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
                         <p class="paragraph paragraph--regular">Eu consequat ac felis donec et odio pellentesque diam. Tortor condimentum lacinia quis vel  consequat semper...</p>
@@ -183,7 +183,7 @@
                     </div>
                 </article>
                 <article class="project">
-                    <img src="./assets/images/projects/project-img-2.svg" alt="project image" class="project__image">
+                    <img src="./assets/images/projects/project-img-2.jpg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
                         <p class="paragraph paragraph--regular">Felis donec et odio pettesque diam. Condimentum lacinia quis vel eros donec consequat semper nulla facilisi...</p>
@@ -193,7 +193,7 @@
                     </div>
                 </article>
                 <article class="project">
-                    <img src="./assets/images/projects/project-img-3.svg" alt="project image" class="project__image">
+                    <img src="./assets/images/projects/project-img-3.jpg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
                         <p class="paragraph paragraph--regular">Egiutas sed tempus pharetra. Felis donec et odio gravida ate diam volutpat porta lorem uat et commodo...</p>
@@ -203,7 +203,7 @@
                     </div>
                 </article>
                 <article class="project">
-                    <img src="./assets/images/projects/project-img-4.svg" alt="project image" class="project__image">
+                    <img src="./assets/images/projects/project-img-4.jpg" alt="project image" class="project__image">
                     <div class="project__info">
                         <h3 class="heading-tertiary">Project Name</h3>
                         <p class="paragraph paragraph--regular">Varius sit amet mattis vulpute. Ultrices mi tempus imperdiet elit eget gravida fermentum dui faucibus...</p>
